fixed copyright alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -44,7 +44,7 @@
 }
 
 .copyright{
-    text-align:"center";
+    text-align:"right";
     position:fixed;
     left:0px;
     bottom:0px;
